# Data-Structures-in-C

./: CMakeLists.txt  dynamicarray.h  main.c  priorityqueue.h  queue.h  sorting.h  stack.h
src/: dynamicarray.c  dynamicarray.h  linkedlist.c  linkedlist.h  main.c  queue.c  queue.h  sorting.c  sorting.h  stack.c  stack.h  utility.h
